Fixes jumping page on teaser-links hover
SRFCMSAL-1594

--- a/source/_patterns/10-atoms/links/block-link.scss
+++ b/source/_patterns/10-atoms/links/block-link.scss
@@ -176,6 +176,7 @@
   &:active + & {
     margin-top: -1px;
     padding-top: 13px;
+    min-height: 49px;
     border-top-width: 1px;
     border-top-style: solid;
     @include customPropWithFallback('border-top-color', '--teaser-background-link-hover', 'rgb(246,246,243)');
